--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-systemProp.kotlinVersion=1.4.30-RC-232
+systemProp.kotlinVersion=1.4.30-RC
 systemProp.policy=executor.policy
 systemProp.indexes=indexes.json
