--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-systemProp.kotlinVersion=1.4.30
-systemProp.kotlinIdeVersion=1.4.30-release
+systemProp.kotlinVersion=1.5.0-M2-519
+systemProp.kotlinIdeVersion=1.5.0-M2-519
 systemProp.policy=executor.policy
 systemProp.indexes=indexes.json
 systemProp.indexesJs=indexesJs.json
+org.gradle.jvmargs=-Dkotlin.daemon.jvm.options=--illegal-access=permit
