--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ kotlin.version=1.4.30
 policy.file=executor.policy
 indexes.file=indexes.json
 indexesJs.file=indexesJs.json
-libraries.folder.jvm=1.4.30
-libraries.folder.js=1.4.30-js
+libraries.folder.jvm=1.5.0-M2-519
+libraries.folder.js=1.5.0-M2-519-js
